# Challenges

./: Cargo.toml  README.md
primes/: README.md  primes.rs
proghum010723/: README.md  easy_med.rs  funny.rs  main.rs
