[package]
name = "challenges"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "primes"
path = "primes/primes.rs"

[[bin]]
name = "fizzbuzz_easymed"
path = "proghum010723/easy_med.rs"

[[bin]]
name = "fizzbuzz"
path = "proghum010723/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
