[package]
name = "challenges"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "primes"
path = "primes/primes.rs"

[[bin]]
name = "fizzbuzz_funny"
path = "proghum010723/funny.rs"

[[bin]]
name = "fizzbuzz"
path = "proghum010723/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
